tests/machine/x/cobol/bool_chain.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:14Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. BOOL-CHAIN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-BOOM-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       IF (1 < 2) AND (2 < 3) AND (3 < 4)
           DISPLAY "true"
       ELSE
           DISPLAY "false"
       END-IF
       PERFORM FN_BOOM
       IF (1 < 2) AND (2 > 3) AND FN_BOOM_RES
           DISPLAY "true"
       ELSE
           DISPLAY "false"
       END-IF
       PERFORM FN_BOOM
       IF (1 < 2) AND (2 < 3) AND (3 > 4) AND FN_BOOM_RES
           DISPLAY "true"
       ELSE
           DISPLAY "false"
       END-IF
       STOP RUN.
       
       FN_BOOM.
           DISPLAY "boom"
           COMPUTE FN_BOOM_RES = 1
           EXIT.
